basic HTML layout

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
   <Head>
     <title>World of Darkness Dice Roller!</title>
   </Head>
+  <script type = "text/Javascript" src = Roller.js></script>
 <Body>
 <h1> World Of Darkness Dice Roller</h1>
 <br>
-<p> Please select the amount of dice you want to roll and the difficulty</p>
+<p>
+  <section>
+    Please select the amount of dice you want to roll and the difficulty
+    </section>
+</p>
+<br>
+<p>
+<section>
+Amount of dice: <form action = "numberOfDice" method = "POST"><input>
+</form>
+</section>
+</p>
+<br>
+<p>
+  <section> 
+  Difficulty of Check:<input>
+</section>
+</p>
+<br>
+<p>Exploding Dice?<input type = checkbox></p>
+<p>
+  <button>Roll!</button>
+</p>
 
 </Body>
 </html>
